# ideviceinstaller

./: .gitignore  .travis.yml  AUTHORS  CreateNuGetPackage.ps1  Makefile.am  NEWS  NuGet.config  README  README.md  appveyor.yml  azure-pipelines.yml  configure.ac  ideviceinstaller.autoconfig  ideviceinstaller.sln  ideviceinstaller.vcxproj  packages.config
.github/workflows/: build.yml
man/: Makefile.am  ideviceinstaller.1
src/: Makefile.am  asprintf.c  asprintf.h  ideviceinstaller.c  ideviceinstaller.exe.manifest.rc  iphoneinstaller.c  libgen.c  libgen.h  vasprintf-c99.c
